--- a/BlogApp/appsettings.Development.json
+++ b/BlogApp/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sql_connection" :  "Data Source=blog.db"
+    "sql_connection": "Data Source=blog.db",
+    "postgresql_connection": "Host=localhost;Port=5432;Database=blogdb;Username=postgres;Password=okan"
   }
 }
